<resources>
    <string name="app_name">AZ</string>
    <string name="auth_prefs_manager">AUTH_PREFS_MANAGER</string>

    <string name="retry">Retry</string>

    <string name="sent_an_attachment">Sent an attachment</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="notifications_is_empty">Notifications is Empty</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="code">Code</string>
    <string name="restriction_form">Restriction Form</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="signup">Signup</string>
    <string name="vaccine">Vaccine</string>
    <string name="vaccines">Vaccines</string>
    <string name="hello">Hello !</string>
    <string name="hello_next_line">Hello !\n</string>
    <string name="welcome_text">Due to the on-going COVID situation countries have implemented travel restrictions. AZ helps you to understand which regulations are affecting your travel plans.</string>
    <string name="search_restrictions">Search Restrictions</string>
    <string name="search_restrictions_next_line">Search\nRestrictions</string>
    <string name="restrictions">Restrictions</string>
    <string name="restrictions_text">Search Restrictions With Airports And Preferred Destinations</string>
    <string name="aboutAZ">About\nAZ</string>
    <string name="about_text">More About Us. How to use AZ</string>
    <string name="my_destinations">My\nTravel\nPlans</string>

    <string name="password_error">Password is not valid.</string>
    <string name="email_error">Email is not valid.</string>
    <string name="unsuccessful_login">Login failed.\nTry again</string>
    <string name="successful_login">Welcome!\nSuccessful Login </string>
    <string name="successful_sign_up">Signup successful</string>
    <string name="unsuccessful_sign_up">Unsuccessful Sign up</string>
    <string name="email">Email</string>
    <string name="nationality">Nationality</string>

    <string name="logout">Logout</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="my_travel_plans">My Travel Plans</string>
    <string name="my_travel_plan">My Travel Plan</string>
    <string name="up_to_date">Up to date</string>
    <string name="days_left"> Days Left!</string>
    <string name="transfer">Transfer</string>
    <string name="click_to_choose">Click to Choose</string>
    <string name="from_click_to_choose">from\nClick to Choose</string>
    <string name="to_click_to_choose">to\nClick to Choose</string>
    <string name="click_to_choose_long_click">Click to Choose\nLong Click to Delete</string>
    <string name="search">SEARCH</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="to_x">To %s</string>
    <string name="from_x">From %s</string>
    <string name="transfer_x">Transfer %s</string>
    <string name="source_text">Switzerland\nGeneva</string>
    <string name="to_text">Germany\nBerlin</string>
    <string name="transfer_text">Georgia\nTbilisi</string>
    <string name="airports">Airports</string>
    <string name="ber_text">BER</string>
    <string name="gva_text">GVA</string>
    <string name="see_more">See More</string>
    <string name="indicate_first">Indicate Source And Destination First!</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="date">Date</string>
    <string name="add_travel_plan">Add\nTravel\nPlan</string>
    <string name="about_info">A mobile application where users can quickly and efficiently check covid regulations worldwide and plan save travel route</string>
    <string name="change_data_first">Change Data First</string>
    <string name="choose_data_first">Choose Data First</string>
    <string name="georgian">georgian</string>
    <string name="travel_regulations">Travel Regulations</string>
    <string name="general_restrictions">General Restrictions</string>

    <string name="generalInformation">General Information : %s</string>
    <string name="generalInformationFull">
        Allows Business Visit : %s
        \nAllows Tourists : %s
        \nCovid Passport Required : %s
        \nPCR Required For NoneResidents : %s
        \nPCR Required For Residents : %s
    </string>
    <string name="infoUrl">
        Info Url
    </string>
    <string name="allowsBusinessVisit"><u>Allows Business Visit</u></string>
    <string name="allowsTourists">Allows Tourists</string>
    <string name="covidPassportRequired">Covid Passport Required</string>
    <string name="pcrRequiredForNoneResidents">PCR Required For NoneResidents</string>
    <string name="pcrRequiredForResidents">PCR Required For Residents</string>

    <string name="restrictionsByVaccination">Restrictions By Vaccination</string>
    <string name="restrictionsByVaccinationFull">
        Dozes Required : %d
        \nis allowed : %s
        \nMax Days After Vaccination : %d
        \nMin Days After Vaccination : %d\n
    </string>
    <string name="restrictionsByNationality">Restrictions By Nationality</string>
    <string name="typeNationality">
        type : %S
    </string>
    <string name="allowsTouristsNat">
        \nAllows Tourists : %s
    </string>
    <string name="allowsBusinessVisitNat">
        \nAllows Business Visit : %s
    </string>
    <string name="pcrRequiredNat">
        \nPCR Required : %s
    </string>
    <string name="fastTestRequiredNat">
        \nFast Test Required : %s
    </string>
    <string name="biometricPassportRequiredNat">
        \nBiometric Passport Required : %s
    </string>
    <string name="locatorFormRequiredNat">
        \nLocator Form Required : %s
    </string>
    <string name="covidPassportRequiredNat">
        \nCovid Passport Required : %s
    </string>
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="choose_different_route">choose different route not %s</string>
    <string name="not_string"> not %s</string>
    <string name="x_days_left">%d days left</string>


    <string name="notification_check">notification_check</string>
    <string name="next">next</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="network_oops">Oops!</string>
    <string name="network_connection_false">No internet :(\nPlease check your internet connection,\nyou are offline now</string>
    <string name="yes">Yes</string>
    <string name="unable_to_go_back">Unable to Go Back</string>
    <string name="ok">OK</string>
    <string name="no">No</string>

    <string name="into_title_1">AZ\nFor Your Comfort</string>
    <string name="into_title_2">AZ\nCovid Restrictions</string>
    <string name="into_title_3">AZ\nUser Information</string>
    <string name="into_desc_1">Welcome to Covid Century. Unfortunately we have to follow the Covid Regulations to destroy pandemic.</string>
    <string name="into_desc_2">Due to the on-going COVID situation we have to obey some rules, so AZ
        is the easiest way to see worldwide Covid Restrictions</string>
    <string name="into_desc_3">For saving travel information and then find saved travel route with its Restrictions</string>


    <string name="next_line">%s\n%s\n%s</string>
</resources>