<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardRestriction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp25"
    android:layout_marginEnd="@dimen/dp25"
    android:background="@drawable/rounded_shapes_green_d_r">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_regular"
        android:padding="10dp"
        android:text="@string/gva_text"
        android:textAlignment="center"
        android:textColor="@color/green_n_d"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".6" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnClose"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".1"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/green_n_d" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/travel_regulations"
        android:textAlignment="center"
        android:textColor="@color/green_n_d"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCode" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lGeneralRestriction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tvType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvType">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGeneralRestriction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/general_restrictions"
            android:textColor="@color/green_n_d"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGeneralInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/generalInformation"
            android:textColor="@color/green_n_d"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGeneralFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/generalInformationFull"
            android:textColor="@color/green_n_d"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lRestrictionsByVaccination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        app:layout_constraintEnd_toEndOf="@+id/lGeneralRestriction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lGeneralRestriction">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRestrictionsByVaccination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/restrictionsByVaccination"
            android:textColor="@color/green_n_d"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRestrictionsByVaccinationFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/generalInformation"
            android:textColor="@color/green_n_d"
            android:textSize="14sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lRestrictionsByNationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/lRestrictionsByVaccination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lRestrictionsByVaccination">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRestrictionsByNationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_regular"
            android:text="@string/restrictionsByNationality"
            android:textColor="@color/green_n_d"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNationalityRestriction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@layout/item_restriction"
            tools:listitem="@layout/item_nationality_restriction" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>

